# tech-challenge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/authentication/: router.py  schemas.py  security.py
app/routers/: api.py
app/services/: html_service.py  offline_service.py
app/utils/: utils.py
data/export/espumantes/: 1976.csv
data/export/suco/: 2017.csv
data/export/uvas/: 2008.csv
data/import/espumante/: 1992.csv
data/import/passas/: 1978.csv
data/import/suco/: 2013.csv
data/import/uvas/: 2009.csv
data/import/vinhos/: 1970.csv
tests/unit/authentication/: test_router.py  test_security.py
tests/unit/routers/: test_api.py
tests/unit/service/: test_html_service.py  test_offline_service.py
tests/unit/utils/: test_utils.py
